--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <string name="search_options_message_show">Show Search Options</string>
     <string name="open_offer_bundle_tag">offer</string>
     <string name="view_offer_frag_tag">viewOfferFrag</string>
+    <string name="create_offer_frag_tag">createOfferFrag</string>
+    <string name="my_offers_frag_tag">myOffersFrag</string>
+    <string name="my_fav_offers_frag_tag">myFavouriteOffersFrag</string>
+    <string name="setup_acc_frag_tag">setupAccFrag</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
